@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-29T01:20:16Z",
+  "timestamp" : "2022-05-29T08:18:57Z",
   "count_outdated" : 298,
   "uniques_outdated" : 163,
-  "count" : 326,
-  "uniques" : 183,
+  "count" : 327,
+  "uniques" : 184,
   "clones" : [
     {
       "timestamp": "2022-05-15T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 2, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-05-29T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
