@@ -1,5 +1,5 @@
 {
-  "count": 28,
+  "count": 29,
   "uniques": 12,
   "clones": [
     {
@@ -46,6 +46,11 @@
       "timestamp": "2022-05-28T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-05-29T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
