@@ -1,3 +1,10 @@
+2022-05-29T08:18:57Z:
+* notice: last 14d: unq all: 12 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 163 298 / 183 326
+* notice: next accum: outdated-unq outdated-all / unq all: 163 298 / 184 327
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: changed dates: [2022-05-29]
+
 2022-05-29T01:20:16Z:
 * notice: last 14d: unq all: 12 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 162 295 / 181 322
